css/ve_tables.css
.entity-visualization h1 {
  display: none;
}

#ve-table {
  height: 100%;
}

#iframe-shell #ve-table {
  height: 100%;
}

#iframe-shell {
  overflow: auto;
  height: 100%;
}

#iframe-shell h2 {
  display: none;
}
h2.veTitle {
  font-size: 18px;
  margin-top: 0px;
  padding: 20px;
  margin-bottom:0px;
}
#iframe-shell .region-content {
  margin: 0px;
}

#iframe-shell a {
    pointer-events:none;
}

#iframe-shell a:hover,
#iframe-shell a:visited,
#iframe-shell a:link,
#iframe-shell a:active
{
    text-decoration: none;
}

body, html {
  height: 100% !important;
  padding-top: 0px;
}

#iframe-shell .region-content {
  margin: 0 !important;
}

.field-name-field-ve-settings{
  display: none;
}

